# stockpitch-study

./: .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  .woodpecker.yml  CHANGELOG.md  CLAUDE.md  COMPANY.md  CONTRIBUTING.md  LICENSE  MATERIALS.md  README.md  ROADMAP.md  pyproject.toml  renovate.json
.claude/commands/: fact-check.md  notes.md  questions-run.md  research.md
ci/: Dockerfile  build-image.sh  check-deps.sh
docs/: ARCHITECTURE.md  QUESTIONS_WORKFLOW.md  RAG_IMPROVEMENTS.md  excel_model_workflow.md
scripts/: extract_table_corpus.py  setup_company.py  setup_company.sh
src/: cli.py  logging_config.py
src/cli/: __init__.py  batch.py  daemon.py  fetch.py  index.py  misc.py  search.py  summarize.py
src/daemon/: __init__.py  client.py  protocol.py  server.py
src/filings/: __init__.py  fetcher.py  form4_parser.py
src/notes/: __init__.py  converter.py
src/questions/: README.md  __init__.py  manifest.py  parser.py  runner.py
src/rag/: __init__.py  agent.py  analyst_parser.py  base_parser.py  constants.py  embeddings.py  feedback.py  parser.py  query.py  query_classifier.py  query_expansion.py  search.py  section_patterns.py  store.py  table_utils.py  transcript_parser.py
src/summarizer/: __init__.py  batch.py  summarizer.py
src/summarizer/config/: __init__.py  section_weights.yaml
src/utils/: __init__.py  file_locks.py
tests/: __init__.py  conftest.py  test_aapl_cli.py  test_agent.py  test_analyst_parser.py  test_batch.py  test_cli.py  test_embeddings.py  test_feedback.py  test_filings.py  test_form4_parser.py  test_integration_e2e.py  test_notes.py  test_parent_child.py  test_parser.py  test_query.py  test_query_classifier.py  test_query_expansion.py  test_questions.py  test_search.py  test_store.py  test_summarizer.py  test_table_intelligence.py  test_transcript_parser.py
tests/fixtures/: inspect_corpus.py  table_corpus.json  validate_corpus.py
